2011-04-20  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Unreviewed build fixes for wx 2.9.1, Cocoa and 64-bit builds.

        * Scripts/webkitdirs.pm:
        * wx/build/build_utils.py:
        * wx/build/settings.py:
        * wx/install-unix-extras:
        * wx/packaging/build-mac-installer.py:
        * wx/packaging/build-win-installer.py:

2011-04-20  Adam Roben  <aroben@apple.com>

        Replace old-run-webkit-tests's win-7 platform with win-7sp0

        It was an error that we had a win-7 platform to begin with. Windows 7 was the most recent
        version of Windows we cared about, so its results should just go in win. But now that
        Windows 7 SP1 exists (and has different results for some tests), we need a place to store
        results for Windows 7 without SP1 (and older versions of Windows).

        Part of <http://webkit.org/b/56617> Several tests fail on Windows 7 SP1 due to font
        differences from Windows 7 "SP0"

        Reviewed by David Kilzer.

        * Scripts/old-run-webkit-tests: Replaced win-7 with win-7sp0. Newer versions of Windows 7
        will just use "win".

        * Scripts/webkitdirs.pm:
        (isWindows7SP0): Added. Replaces isWindows7, because that function had no remaining callers.

2011-04-20  Adam Roben  <aroben@apple.com>

        Teach webkitdirs::winVersion about build numbers

        The build number isn't currently used, but soon will be.

        As a bonus, winVersion now works on non-Cygwin variants of Perl!

        Fixes <http://webkit.org/b/58991> Need a way to distinguish between Windows 7 and Windows 7
        SP1

        Reviewed by Anders Carlsson.

        * Scripts/webkitdirs.pm:
        (isAnyWindows): Added. Returns true if we're running on any Windows-ish Perl.
        (determineWinVersion): Use `cmd /c ver` to get the version number, including the build
        number. Parse the version number into a hash, similar to how osXVersion() works.

        (isWindows7):